--- a/Config/Rules.ini
+++ b/Config/Rules.ini
@@ -36,15 +36,15 @@ IMAGE_SIZE: 48
 DROP_OUT_VALUE: 0.2
 ACTIVATION: relu
 LOSS: categorical_crossentropy
-EPOCH: 500
+EPOCH: 20
 SNAPSHOT_STEP: 500
 # dropout = 1 - keep_prob
 KEEP_PROB: 0.956
 LR: 0.016
 LEARNING_RATE_DECAY: 0.864
 DECAY_STEP: 50
-# {'Momentum', 'Adam', 'Rmsprop', 'Adagrad', 'Adadelta'}
-OPTIMIZER: Momentum
+# {'SGD', 'Momentum', 'Adam', 'Rmsprop', 'Adagrad', 'Adadelta'}
+OPTIMIZER: SGD
 # Momentum value for Momentum optimizer, or beta1 value for Adam
 OPTIMIZER_PARAM: 0.95
 
