--- a/Config/Rules_Adam.ini
+++ b/Config/Rules_Adam.ini
@@ -1,6 +1,6 @@
 [Default]
 CODE: HNAPS
-NAME: F24NT3903tedEmotionDetection_${CODE}
+NAME: FIL25T3903tedEmotionDetection_${CODE}
 VERSION: 1.0
 Env: Dev
 #Prod
@@ -46,12 +46,29 @@ OPTIMIZER: Adam
 # Momentum value for Momentum optimizer, or beta1 value for Adam
 OPTIMIZER_PARAM: 0.555
 
+[Conv_6_64]
+StrategyName: Conv_6_64
+CHANNEL: 1
+IMAGE_SIZE: 48
+DROP_OUT_VALUE: 0.0
+ACTIVATION: relu
+LOSS: categorical_crossentropy
+EPOCH: 500
+SNAPSHOT_STEP: 500
+LR: 1e-3
+DECAY_STEP: 50
+LEARNING_RATE_DECAY: 0.999
+# {'Momentum', 'Adam', 'Rmsprop', 'Adagrad', 'Adadelta'}
+OPTIMIZER: Adam
+# Momentum value for Momentum optimizer, or beta1 value for Adam
+OPTIMIZER_PARAM: 0.555
+
 [TensorBoard]
 LOG_DIR: ${Default:ROOT_DIR}Logs/
 VERBOSE: 1
 
 [Rules]
-EDStrategyName: Conv_10
+EDStrategyName: Conv_6_64
 
 [Models]
 MODELS_DIR: ${Default:ROOT_DIR}TrainedModels/${Default:USECASE_NAME}/
